# Water-Drinker-Reminder

./: .gitignore  LICENSE  README.md  setup.cfg
WaterDrinkerReminder/: main.py
