[metadata]
name = WaterDrinkerReminder
version = 1.0
description = Reminds to drink water in time
author = YatirindraBanerjee

[options]
packages = find:
install_requires =
    plyer==2.0.0
    wheel==0.34.2

[options.entry_points]
console_scripts =
    WaterDrinkerReminder = WaterDrinkerReminder.main:notify
